# rust-template

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SUPPORT.md  cliff.toml  justfile  trivy.yaml
.github/: RELEASE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/aw/: actions-lock.json
.github/workflows/: _diag.yml  _diag2.yml  adr-validation.yml  adr-viewer.yml  benchmark-regression.yml  benchmark.yml  ci-checks.yml  ci-coverage.yml  ci-test-matrix.yml  code-quality.yml  contributors.yml  copilot-setup-steps.yml  daily-docs-review.lock.yml  daily-docs-review.md  dast.yml  dependabot-automerge.yml  docker-hub.yml  docs-deploy.yml  docs-freshness.lock.yml  docs-freshness.md  fuzz-testing.yml  mutation-testing.yml  nightly.yml  package-homebrew.yml  pipeline.yml  publish.yml  quality-gates.yml  release-docker.yml  release.yml  secrets-scan.yml  security-audit.yml  spell-check.yml  template-init.yml
.vex/: openvex.json
benches/: benchmarks.rs
crates/: lib.rs  main.rs  problem.rs
crates/mif-cli/: Cargo.toml
crates/mif-mcp/: Cargo.toml
docs/: DEPLOYMENT.md  README.md
docs/adr/: 0001-use-architectural-decision-records.md  0002-documentation-directory-structure.md  README.md
docs/distribution/: ALTERNATIVE-REGISTRIES.md  DOCKER-REGISTRIES.md  PACKAGE-MANAGERS.md
docs/runbooks/: RELEASING.md  (+3 more)
examples/: basic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: process.rs
site/: astro.config.mjs  package-lock.json  package.json
tests/: integration_test.rs
(+121 files in other folders)
